<resources>
    <string name="app_name">CountryQuiz</string>
    <string name="app_title">Country Quiz</string>
    <!-- EditNameDialogFragment -->
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your E-Mail</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="done">Done</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">YourEmail@address.com</string>
    <string name="your_password">****</string>
    <string name="error_message">An error occurred. Try again later.</string>
    <!-- WelcomeFragment -->
    <string name="welcome_fragment">Welcome to Country Quiz!</string>
    <string name="welcome_fragment_2">Loading data may take a few seconds. Please wait.</string>
    <!-- MainMenuFragment -->
    <string name="title_main_menu_fragment">Country Quiz</string>
    <string name="high_score_main_menu_fragment">High score: %d</string>
    <string name="level_main_menu_fragment">Level %d</string>
    <string name="name_main_menu_fragment">Player 1</string>
    <string name="start_main_menu_fragment">Start New Game</string>
    <string name="continue_main_menu_fragment">Continue Game</string>
    <string name="leaderboard_main_menu_fragment">Leader Board</string>
    <string name="question_topLevelDomain">What is the domain of %s used on the internet?</string>
    <string name="question_capital">What is the %s of %s?</string>
    <string name="question_region">In which %s can %s be found?</string>
    <string name="question_area">What is the approximate %s in square km of %s?</string>
    <string name="question_population">What is the approximate %s of %s?</string>
    <string name="question_timezones">In which time zone can %s be found?</string>
    <string name="question_borders">Which country is a neighbor to %s?</string>
    <string name="question_currencies">Which is the currency of %s?</string>
    <string name="question_flag">Which is the %s of %s?</string>
    <string name="answer_no_domain">Has no internet domain</string>
    <string name="answer_no_timezones">There is no time zone applied</string>
    <string name="answer_no_borders">Has no neighbor</string>
    <string name="answer_no_currency">Has no currency applied</string>
    <!-- EmailPasswordActivity for FirebaseAuth -->
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="reload">Reload</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <!-- GameFragment -->
    <string name="game_submit">Submit</string>
    <!-- FeedbackDialogFragment -->
    <string name="answer_right">Right answer</string>
    <string name="answer_wrong">Wrong answer</string>
    <string name="done">Done</string>


</resources>